fix overlapping of lead

--- a/source/_assets/sass/_style_sidebar.scss
+++ b/source/_assets/sass/_style_sidebar.scss
@@ -2,6 +2,7 @@
   flex-direction: column;
 }
 .sidebar-container .card { width: 100%;  
+  ul { margin-bottom:0;}
   li { margin-bottom: .5rem; }
   li + li { margin-top: .5rem;}
 }
